[package]
name = "wasmer-instance"
version = "1.2.0"
authors = ["Johnathan Sharratt <johnathan.sharratt@gmail.com>"]
edition = "2021"
description = "ATE Execution Environment Session Server that provides terminal sessions for running processes"
license = "MIT OR Apache-2.0"
keywords = [
    "ssh-server",
    "wasm"
]
repository = "https://github.com/john-sharratt/ate/tree/master/wasmer-instance"
readme = "README.md"

[features]
default = []

[dependencies]
wasmer-wasi = { version = "3.0.0-beta", path = "../../wasmer/lib/wasi", default-features = false, features = [ "sys", "compiler", "compiler-cranelift", "os" ] }
clap = { version = "^3.0.0-rc.7", features = [ "derive" ] }
tokio = { version = "1", features = [ "rt", "io-util", "macros", "sync", "time", "fs" ], default_features = false }
#tracing = { version = "^0.1", features = [ "log", "release_max_level_info" ] }
tracing = { version = "^0.1", features = [ "log" ] }
tracing-futures = { version = "^0.2" }
tracing-subscriber = { version = "^0.2" }
thrussh = { version = "^0.33", git = "https://github.com/john-sharratt/thrussh.git" }
thrussh-keys = { version = "^0.21", git = "https://github.com/john-sharratt/thrussh.git" }
url = "^2"
bytes = "^1"
percent-encoding = "^2"
error-chain = { version = "^0.12", default_features = false }
futures = "^0.3"
shellexpand = "^2"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
bincode = "^1"
async-trait = "^0.1"
raw_tty = "0.1.0"
regex = "^1"
ttl_cache = "^0.5"
ctrlc = { version = "^3" }
ate = { version = "^1.3", path = "../lib", default_features = false, features = [ "client" ] }
wasmer-auth = { version = "^1.9", path = "../wasmer-auth", default_features = false, features = [ "client" ] }
ate-comms = { version = "^1.1", path = "../comms", features = [ "quantum" ], default_features = false }
ate-files = { version = "^1.2", path = "../files" }
#wasmer-gw = { version = "^1.2", path = "../wasmer-gw", features = [ "tls", "dfs" ] }
wasmer-deploy-cli = { version = "^1.3", path = "../wasmer-deploy-cli" }
#wasmer-ssh = { version = "^1.3", path = "../wasmer-ssh" }
dummy-waker = "^1"
http = { version = "^0.2" }
fastrand = "^1.4"