[package]
name = "wasmer-os"
version = "1.0.0"
authors = ["John Sharratt <johnathan.sharratt@gmail.com>"]
edition = "2021"
description = "Terminal Library built on WASMER and ATE"
license = "MIT OR Apache-2.0"
keywords = [ "wasm", "browser", "terminal" ]
repository = "https://github.com/john-sharratt/ate"
readme = "../README.md"

[features]
default = [ ]
js = [ "wasmer/js-default", "wasmer/js-serializable-module", "wasmer-wasi/js-default" ]
#sys = [ "wasmer/sys-default", "wasmer-wasi/sys", "wasmer-wasi/logging", "tokio/rt-multi-thread", "wasmer-bus-tty/sys", "wasmer-bus-ws/sys" ]
sys = [ "wasmer/sys-default", "wasmer-wasi/sys", "wasmer-wasi/logging", "tokio/rt-multi-thread" ]
host-net = [ "wasmer-wasi-local-networking", "wasmer-wasi/host-vnet" ]
mesh-net = [ ]
llvm = [ "wasmer-compiler-llvm", "wasmer-compiler" ]
cranelift = [ "wasmer-compiler-cranelift", "wasmer-compiler" ]
singlepass = [ "wasmer-compiler-singlepass", "wasmer-compiler" ]
async_ws = [ ]

[dependencies]
wasmer-os-grammar = { version = "^0.1", path = "../wasmer-os-grammar", package = "wasmer-os-grammar" }

#wasmer = { version = "3.0.0-alpha.4", git = "https://github.com/john-sharratt/wasmer.git", branch = "wasmer3-wasix", default-features = false, features = [ "wat"] }
#wasmer-wasi = { version = "3.0.0-alpha.4", git = "https://github.com/john-sharratt/wasmer.git", branch = "wasmer3-wasix", default-features = false, features = [ "mem-fs" ] }
#wasmer-vfs = { version = "3.0.0-alpha.4", git = "https://github.com/john-sharratt/wasmer.git", branch = "wasmer3-wasix", default-features = false, features = ["mem-fs"] }
#wasmer-vnet = { version = "3.0.0-alpha.4", git = "https://github.com/john-sharratt/wasmer.git", branch = "wasmer3-wasix", default-features = false }
#wasmer-vbus = { version = "3.0.0-alpha.4", git = "https://github.com/john-sharratt/wasmer.git", branch = "wasmer3-wasix", default-features = false }
#wasmer-compiler-cranelift = { version = "3.0.0-alpha.4", git = "https://github.com/john-sharratt/wasmer.git", branch = "wasmer3-wasix", optional = true }
#wasmer-compiler-llvm = { version = "3.0.0-alpha.4", git = "https://github.com/john-sharratt/wasmer.git", branch = "wasmer3-wasix", optional = true }
#wasmer-compiler-singlepass = { version = "3.0.0-alpha.4", git = "https://github.com/john-sharratt/wasmer.git", branch = "wasmer3-wasix", optional = true }
#wasmer-compiler = { version = "3.0.0-alpha.4", git = "https://github.com/john-sharratt/wasmer.git", branch = "wasmer3-wasix", features = [ "translator" ], optional = true }
#wasmer-wasi-local-networking = { version = "3.0.0-alpha.4", git = "https://github.com/john-sharratt/wasmer.git", branch = "wasmer3-wasix", optional = true }

wasmer = { version = "3.0.0-alpha.4", path = "../../wasmer/lib/api", default-features = false, features = [ "wat", "tracing" ] }
wasmer-wasi = { version = "3.0.0-alpha.4", path = "../../wasmer/lib/wasi", default-features = false, features = [ "mem-fs" ] }
wasmer-vfs = { version = "3.0.0-alpha.4", path = "../../wasmer/lib/vfs", default-features = false, features = ["mem-fs"] }
wasmer-vnet = { version = "3.0.0-alpha.4", path = "../../wasmer/lib/vnet", default-features = false }
wasmer-vbus = { version = "3.0.0-alpha.4", path = "../../wasmer/lib/vbus", default-features = false }
wasmer-compiler-cranelift = { version = "3.0.0-alpha.4", path = "../../wasmer/lib/compiler-cranelift", optional = true }
wasmer-compiler-llvm = { version = "3.0.0-alpha.4", path = "../../wasmer/lib/compiler-llvm", optional = true }
wasmer-compiler-singlepass = { version = "3.0.0-alpha.4", path = "../../wasmer/lib/compiler-singlepass", optional = true }
wasmer-compiler = { version = "3.0.0-alpha.4", path = "../../wasmer/lib/compiler", features = [ "translator" ], optional = true }
wasmer-wasi-local-networking = { version = "3.0.0-alpha.4", path = "../../wasmer/lib/wasi-local-networking", optional = true }

chrono = { version = "^0.4", git = "https://github.com/john-sharratt/chrono.git" }
tracing = { version = "^0.1" }
tracing-futures = { version = "^0.2" }
tracing-wasm = { version = "^0.2" }
bytes = "^1"
once_cell = "^1"
serde = { version = "^1", features = ["derive"] }
serde_derive = "^1"
serde_json = "^1"
tokio = { version = "1.20.1", features = [ "rt", "sync", "macros" ], default_features = false }
derivative = { version = "^2" }
base64 = { version = "^0.13" }
sha2 = { version = "^0.9" }
wasmer-bus = { version = "^1", path = "../wasmer-bus/lib", default_features = false }
wasmer-bus-fuse = { version = "^1", path = "../wasmer-bus/fuse",  default_features = false }
wasmer-bus-ws = { version = "^1", path = "../wasmer-bus/ws", default_features = false }
wasmer-bus-tty = { version = "^1", path = "../wasmer-bus/tty", default_features = false }
wasmer-bus-time = { version = "^1", path = "../wasmer-bus/time", default_features = false }
wasmer-bus-process = { version = "^1", path = "../wasmer-bus/process", default_features = false }
wasmer-bus-reqwest = { version = "^1", path = "../wasmer-bus/reqwest", default_features = false }
wasmer-bus-webgl = { version = "^1", path = "../wasmer-bus/webgl", default_features = false }
url = { version = "^2" }
regex = { version = "^1.5" }
hex = "^0.4"
fastrand = "^1.5"
bincode = "1"
async-trait = "^0.1"
dummy-waker = "^1"
clap = { version = "^3.0.0-rc.7", features = [ "derive" ] }
wild = "^2"
cooked-waker = { version = "^5" }
serde_yaml = { version = "^0.8" }
include_dir = "0.7.2"
shellexpand = "^2"
weezl = "^0.1"

[build-dependencies]
build-deps = "^0.1"
