[package]
name = "wasmer-ssh"
version = "1.3.0"
authors = ["Johnathan Sharratt <johnathan.sharratt@gmail.com>"]
edition = "2021"
description = "SSH Server that provides terminal sessions for Web Assembly programs"
license = "MIT OR Apache-2.0"
keywords = [
    "ssh-server",
    "wasm"
]
repository = "https://github.com/wasmerio/ate/tree/master/wasmer-ssh"
readme = "README.md"

[features]
default = []

[dependencies]
clap = { version = "^3.0.0-rc.7", features = [ "derive" ] }
tokio = { version = "1.20.1", features = [ "rt", "io-util", "macros", "sync", "time", "fs" ], default_features = false }
#tracing = { version = "^0.1", features = [ "log", "release_max_level_info" ] }
tracing = { version = "^0.1", features = [ "log" ] }
tracing-futures = { version = "^0.2" }
tracing-subscriber = { version = "^0.2" }
thrussh = { version = "^0.33", git = "https://github.com/john-sharratt/thrussh.git" }
thrussh-keys = { version = "^0.21", git = "https://github.com/john-sharratt/thrussh.git" }
url = "^2"
error-chain = { version = "^0.12", default_features = false }
futures = "^0.3"
shellexpand = "^2"
serde = { version = "^1", features = ["derive"] }
bincode = "^1"
wasmer-term = { version = "^1.0", path = "../wasmer-term", default_features = false }
async-trait = "^0.1"
raw_tty = "0.1.0"
regex = "^1"
